# InteractorSuite

InteractorSuite/: main.cpp
InteractorSuite.xcodeproj/: project.pbxproj
InteractorSuite.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
InteractorSuite.xcodeproj/xcuserdata/pelinakan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
InteractorSuite.xcodeproj/xcuserdata/pelinakan.xcuserdatad/xcschemes/: InteractorSuite.xcscheme  xcschememanagement.plist
InteractorSuite/src/: BackgroundInteractionFrequency.h  CMakeLists.txt  Data_Structures.h  Find_Interactions.h  GetOptions.h  Makefile  Mappability.h  Probes.h  ProcessBAMFiles.cpp  ProcessBAMFiles.h  Promoters.h  Proximities.h  RESitesCount_MemAccess.h  SupplementaryFunctions.h  cmake_install.cmake
